# bootstrapped-aren

./: .gitattributes  README.md  pyproject.toml
bootstrapped_aren/: driver_index_tracking.py  driver_simulation.py
bootstrapped_argen/: driver.py  driver_index_tracking.py  driver_simulation.py
data/: bodict_borepli200_15lams_10alphas_2020-09-01_2021-09-01_train0.7_val0.2_test0.1.pickle  bodict_borepliNone_15lams_10alphas_2020-09-01_2021-09-01_train0.7_val0.2_test0.1.pickle  myplot
docs/: Deverlopers.md
tests/: test_bootstrapped_regressor.py  test_driver.py  test_driver_index_tracking.py  test_simulation.py  test_simulation_driver.py
