[tool.poetry]
name = "boostrapped_lasso"
version = "0.1.0"
description = ""
authors = ["yujiading <yujia.ding@cgu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.2"
scikit-learn = "^0.24.2"
generalized-elastic-net = "^1.0.1"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
yfinance = "^0.1.63"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
